--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,8 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>TallerFrontend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
+<h1 class="text-3xl font-bold underline text-blue-600 p-4 bg-gray-100">
+  ¡Hola Tailwind en Angular!
+</h1>
+
+<div class="p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg flex items-center space-x-4">
+  <div class="text-xl font-medium text-black">Componente de prueba</div>
+  <p class="text-gray-500">Esto es responsivo gracias a Tailwind.</p>
+</div>
